--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,37 @@
     <link rel="stylesheet" href="style.css">
     <title>Javascript Coding Quiz</title>
 </head>
+
 <body>
     <h1>Javascript Coding Quiz</h1>
-    <div id="quiz"></div>
-    <button id="submit">Submit</button>
-    <div id="results"></div>
 
+    <div id="start">
+        <h2>Are you Ready?</h2>
+        <button id="start-btn">Start</button>
+    </div>
+
+    <div id="game">
+        <h2>Game</h2>
+        <div id="quiz-questions"></div>
+        <div id=""></div>
+    </div>
+
+    <div id="game-over">
+        <h2>End Screen</h2>
+        <div>
+            <label for="leaderboard">Leaderboard</label>
+            <input type="text" id="leaderboard">
+        </div>
+    </div>
+
+    <!--  
+    <div id="quiz"></div>
+    
+    <div id="results"></div>
+-->
 
 
     <script src="./script.js"></script>
 </body>
+
 </html>
