--- a/index.html
+++ b/index.html
@@ -10,32 +10,33 @@
 </head>
 
 <body>
+      <div id="timer">Timer</div>
     <h1>Javascript Coding Quiz</h1>
 
+  
+
     <div id="start">
-        <h2>Are you Ready?</h2>
+        <h2>Are you Ready to Begin?</h2>
         <button id="start-btn">Start</button>
+        
     </div>
 
     <div id="game">
-        <h2>Game</h2>
-        <div id="quiz-questions"></div>
-        <div id=""></div>
+        <h2>Questions</h2>
+        <div id="quiz-questions">insert questions here</div>
+        <div id="quiz-choices">insert choices here</div>
+        <button id="next-btn">Next</button>
+        <button id="end-btn">End Game</button>
+
     </div>
 
     <div id="game-over">
-        <h2>End Screen</h2>
+        <h2>Game Over</h2>
         <div>
-            <label for="leaderboard">Leaderboard</label>
-            <input type="text" id="leaderboard">
+            <label for="add-score">Add Score</label>
+            <input type="text" id="add-score">
         </div>
     </div>
-
-    <!--  
-    <div id="quiz"></div>
-    
-    <div id="results"></div>
--->
 
 
     <script src="./script.js"></script>
