--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="start">
         <h2>Are you Ready to Begin?</h2>
-        <button id="start-btn">Start</button>
+        <button id="start-btn">start</button>
         
     </div>
 
@@ -25,8 +25,8 @@
         <h2>Questions</h2>
         <div id="quiz-questions">insert questions here</div>
         <div id="quiz-choices">insert choices here</div>
-        <button id="next-btn">Next</button>
-        <button id="end-btn">End Game</button>
+        <button id="next-btn">next</button>
+        <button id="end-btn">end game</button>
 
     </div>
 
