added showingCurrentQuestion var

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="game">
         <h2>Questions</h2>
         <div id="quiz-questions">insert questions here</div>
-        <div id="quiz-choices">insert choices here</div>
+        <div id="quiz-choices"></div>
         <button id="next-btn">next</button>
         <button id="end-btn">end game</button>
 
