added questions to document

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-      <div id="timer">Timer</div>
+      <div id="timer">0:00</div>
     <h1>Javascript Coding Quiz</h1>
 
   
@@ -23,10 +23,11 @@
 
     <div id="game">
         <h2>Questions</h2>
-        <div id="quiz-questions">insert questions here</div>
+        <div id="quiz-questions"></div>
         <div id="quiz-choices"></div>
-        <button id="next-btn">next</button>
         <button id="end-btn">end game</button>
+        <button id="next-btn">next</button>
+       
 
     </div>
 
