updated timer and score

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
       <div id="timer">0:00</div>
+      <div id="score">SCORE:</div>
     <h1>Javascript Coding Quiz</h1>
 
   
@@ -25,6 +26,8 @@
         <h2>Questions</h2>
         <div id="quiz-questions"></div>
         <div id="quiz-choices"></div>
+
+        </div>
         <button id="end-btn">end game</button>
         <button id="next-btn">next</button>
        
