updated correct ifs

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-      <div id="timer">0:00</div>
-      <div id="score">SCORE:</div>
+    <div id="timer">0:00</div>
+    <div id="score"></div>
     <h1>Javascript Coding Quiz</h1>
 
-  
+
 
     <div id="start">
         <h2>Are you Ready to Begin?</h2>
         <button id="start-btn">start</button>
-        
+
     </div>
 
     <div id="game">
@@ -27,10 +27,10 @@
         <div id="quiz-questions"></div>
         <div id="quiz-choices"></div>
 
-        </div>
-        <button id="end-btn">end game</button>
-        <button id="next-btn">next</button>
-       
+    </div>
+    <button id="end-btn">end game</button>
+    <button id="next-btn">next</button>
+
 
     </div>
 
@@ -39,7 +39,9 @@
         <div>
             <label for="add-score">Add Score</label>
             <input type="text" id="add-score">
+            <button id="submit-score">submit</button>
         </div>
+        <div><button id="play-again">play again</button></div>
     </div>
 
 
