--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 </head>
 
 <body class="center">
-    <div class="container">
-        <div class="row">
+    <div class="container ">
+        <div class="text-center row">
             <div id="timer">0:00</div>
             <div id="score"></div>
             <h1>javascript coding quiz</h1>
         </div>
 
 
-        <div id="start">
+        <div class= "text-center"id="start">
             <h2>are you ready to begin?</h2>
             <button class="col-2 btn btn-outline-secondary" id="start-btn">start</button>
 
@@ -36,14 +36,14 @@
 
     </div>
 
-    <div id="game-over">
+    <div class= "container text-center" id="game-over">
         <h2>Game Over</h2>
         <div>
             <label for="add-score">Add Score</label>
             <input class= "col2" type="text" id="add-score">
-            <button class="col-2" id="submit-score">submit</button>
+            <button class="col-2 btn btn-outline-secondary text-center" id="submit-score">submit</button>
         </div>
-        <div><button class="col 2 btn btn-outline-secondary" id="play-again">play again</button></div>
+        <div><button class="col-2 btn btn-outline-secondary text-center" id="play-again">play again</button></div>
     </div>
     </div>
 
